hw commit for check

--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
               <a
                 class="contact-item-link contact link"
                 href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                ><svg class="header-icons" width="10" height="20">
+                  <use href="./image/icons.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="contact-item">
               <a class="contact-item-link contact link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+                ><svg class="header-icons" width="10" height="20">
+                  <use href="./image/icons.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -79,6 +85,11 @@
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="list specialty-list specialty-container">
             <li class="specialty-item">
+              <div class="specialty-icons-container">
+                <svg class="business-icons" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">увага до деталей</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -86,6 +97,12 @@
               </p>
             </li>
             <li class="specialty-item">
+              <div class="specialty-icons-container">
+                <svg class="business-icons" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+
               <h3 class="title">пунктуальність</h3>
               <p class="text">
                 Завдання організації, особливо&nbsp;рамки і місце навчання
@@ -93,6 +110,12 @@
               </p>
             </li>
             <li class="specialty-item">
+              <div class="specialty-icons-container">
+                <svg class="business-icons" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="title">планування</h3>
               <p class="text">
                 Так само консультація з широким активом&nbsp;значною мірою
@@ -100,6 +123,12 @@
               </p>
             </li>
             <li class="specialty-item">
+              <div class="specialty-icons-container">
+                <svg class="business-icons" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="title">сучасні технології</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -156,6 +185,57 @@
                 <div class="card">
                   <h3 class="title">Ігор Дем'яненко</h3>
                   <p class="text">Product Designer</p>
+                  <ul class="list team-social">
+                    <li>
+                      <a
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+
+                    <li>
+                      <a
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -167,6 +247,56 @@
                 <div class="card">
                   <h3 class="title">Ольга Рєпіна</h3>
                   <p class="text">Frontend Developer</p>
+                  <ul class="list team-social">
+                    <li>
+                      <a
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -178,6 +308,56 @@
                 <div class="card">
                   <h3 class="title">Микола Тарасов</h3>
                   <p class="text">Marketing</p>
+                  <ul class="list team-social">
+                    <li>
+                      <a
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="team-item">
@@ -189,10 +369,109 @@
                 <div class="card">
                   <h3 class="title">Михайло Єрмаков</h3>
                   <p class="text">UI Designer</p>
+                  <ul class="list team-social">
+                    <li>
+                      <a
+                        href="http://instagram.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://twitter.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://facebook.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li>
+                      <a
+                        href="http://linkedin.com"
+                        target="_blank"
+                        rel="noopener nofollow noreferrer"
+                        class="team-icons-items"
+                      >
+                        <svg class="team-icons" width="20" height="20">
+                          <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
                 </div>
               </li>
             </ul>
           </div>
+        </div>
+      </section>
+      <section class="section clients">
+        <div class="container">
+          <h2 class="clients-text section-title">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li>
+              <a href="" class="clients-icons-items">
+                <svg class="team-icons" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="clients-icons-items">
+                <svg class="team-icons" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="clients-icons-items">
+                <svg class="team-icons" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="clients-icons-items">
+                <svg class="team-icons" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="clients-icons-items">
+                <svg class="team-icons" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="clients-icons-items">
+                <svg class="team-icons" width="106" height="60">
+                  <use href="./images/icons.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -200,33 +479,88 @@
     <!-- background -->
     <footer class="footer-style">
       <div class="container">
-        <a href="./index.html" class="link logo-footer"
-          ><span class="logo logo-web">Web</span
-          ><span class="logo logo-studio-footer">Studio</span></a
-        >
-        <address>
-          <ul class="address-list list">
-            <li class="footer-item">
+        <div>
+          <a href="./index.html" class="link logo-footer"
+            ><span class="logo logo-web">Web</span
+            ><span class="logo logo-studio-footer">Studio</span></a
+          >
+          <address>
+            <ul class="address-list list">
+              <li class="footer-item">
+                <a
+                  href="https://goo.gl/maps/tbxTE9ojFHjDwj2v6"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  class="location link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@devstudio.com" class="address-style link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380961111111" class="address-style link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <p class="footer-text">приєднуйтесь</p>
+          <ul class="list footer-social-list">
+            <li>
               <a
-                href="https://goo.gl/maps/tbxTE9ojFHjDwj2v6"
+                href="http://instagram.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="location link"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                class="team-icons-items"
               >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="address-style link"
-                >info@devstudio.com</a
+            <li>
+              <a
+                href="http://twitter.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="team-icons-items"
               >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="address-style link"
-                >+38 096 111 11 11</a
+            <li>
+              <a
+                href="http://facebook.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="team-icons-items"
               >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="http://linkedin.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="team-icons-items"
+              >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
