commits for check

--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@
 
     <!-- background -->
     <footer class="footer-style">
-      <div class="container">
-        <div>
+      <div class="container footer-container">
+        <div class="footer-contacts">
           <a href="./index.html" class="link logo-footer"
             ><span class="logo logo-web">Web</span
             ><span class="logo logo-studio-footer">Studio</span></a
