--- a/index.html
+++ b/index.html
@@ -44,21 +44,33 @@
         </div>
         <div class="contact-container">
           <ul class="list contact">
+            <li class="contact-item-icon">
+              <a class="link" href="mailto:info@devstudio.com"
+                ><svg class="header-icons" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+              </a>
+            </li>
             <li class="contact-item">
               <a
                 class="contact-item-link contact link"
                 href="mailto:info@devstudio.com"
-                ><svg class="header-icons" width="10" height="20">
-                  <use href="./image/icons.svg#icon-envelope"></use>
-                </svg>
+              >
                 info@devstudio.com</a
               >
             </li>
-            <li class="contact-item">
-              <a class="contact-item-link contact link" href="tel:+380961111111"
-                ><svg class="header-icons" width="10" height="20">
-                  <use href="./image/icons.svg#icon-smartphone"></use>
+            <li class="contact-item-icon">
+              <a class="link" href="tel:+380961111111"
+                ><svg class="header-icons" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
+              </a>
+            </li>
+            <li class="contact-item">
+              <a
+                class="contact-item-link contact link"
+                href="tel:+380961111111"
+              >
                 +38 096 111 11 11</a
               >
             </li>
