clients section commit

--- a/index.html
+++ b/index.html
@@ -441,42 +441,42 @@
         <div class="container">
           <h2 class="clients-text section-title">Постійні клієнти</h2>
           <ul class="clients-list list">
-            <li>
+            <li class="client-items">
               <a href="" class="clients-icons-items">
                 <svg class="team-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client-items">
               <a href="" class="clients-icons-items">
                 <svg class="team-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client-items">
               <a href="" class="clients-icons-items">
                 <svg class="team-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client-items">
               <a href="" class="clients-icons-items">
                 <svg class="team-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client-items">
               <a href="" class="clients-icons-items">
                 <svg class="team-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client-items">
               <a href="" class="clients-icons-items">
                 <svg class="team-icons" width="106" height="60">
                   <use href="./images/icons.svg#icon-logo-6"></use>
