--- a/portfolio.html
+++ b/portfolio.html
@@ -42,16 +42,34 @@
         </div>
         <div class="contact-container">
           <ul class="list contact">
+            <li class="contact-item-icon">
+              <a class="link" href="mailto:info@devstudio.com"
+                ><svg class="header-icons" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+              </a>
+            </li>
             <li class="contact-item">
               <a
                 class="contact-item-link contact link"
                 href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+              >
+                info@devstudio.com</a
               >
             </li>
+            <li class="contact-item-icon">
+              <a class="link" href="tel:+380961111111"
+                ><svg class="header-icons" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+              </a>
+            </li>
             <li class="contact-item">
-              <a class="contact-item-link contact link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
+              <a
+                class="contact-item-link contact link"
+                href="tel:+380961111111"
+              >
+                +38 096 111 11 11</a
               >
             </li>
           </ul>
@@ -188,34 +206,89 @@
     </main>
     <!-- background -->
     <footer class="footer-style">
-      <div class="container">
-        <a href="./index.html" class="link logo-footer"
-          ><span class="logo logo-web">Web</span
-          ><span class="logo logo-studio-footer">Studio</span></a
-        >
-        <address>
-          <ul class="address-list list">
-            <li class="footer-item">
+      <div class="container footer-container">
+        <div class="footer-contacts">
+          <a href="./index.html" class="link logo-footer"
+            ><span class="logo logo-web">Web</span
+            ><span class="logo logo-studio-footer">Studio</span></a
+          >
+          <address>
+            <ul class="address-list list">
+              <li class="footer-item">
+                <a
+                  href="https://goo.gl/maps/tbxTE9ojFHjDwj2v6"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  class="location link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@devstudio.com" class="address-style link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380961111111" class="address-style link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <p class="footer-text">приєднуйтесь</p>
+          <ul class="list footer-social-list">
+            <li>
               <a
-                href="https://goo.gl/maps/tbxTE9ojFHjDwj2v6"
+                href="http://instagram.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="location link"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                class="team-icons-items"
               >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="address-style link"
-                >info@devstudio.com</a
+            <li>
+              <a
+                href="http://twitter.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="team-icons-items"
               >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="address-style link"
-                >+38 096 111 11 11</a
+            <li>
+              <a
+                href="http://facebook.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="team-icons-items"
               >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="http://linkedin.com"
+                target="_blank"
+                rel="noopener nofollow noreferrer"
+                class="team-icons-items"
+              >
+                <svg class="team-icons" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
