--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                 href="http://instagram.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
                 <svg class="team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
@@ -540,7 +540,7 @@
                 href="http://twitter.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
                 <svg class="team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
@@ -552,7 +552,7 @@
                 href="http://facebook.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
                 <svg class="team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
@@ -564,7 +564,7 @@
                 href="http://linkedin.com"
                 target="_blank"
                 rel="noopener nofollow noreferrer"
-                class="team-icons-items"
+                class="footer-icons-items"
               >
                 <svg class="team-icons" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
