--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <div class="footer-social">
           <p class="footer-text">приєднуйтесь</p>
           <ul class="list footer-social-list">
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://instagram.com"
                 target="_blank"
@@ -535,7 +535,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://twitter.com"
                 target="_blank"
@@ -547,7 +547,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://facebook.com"
                 target="_blank"
@@ -559,7 +559,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a
                 href="http://linkedin.com"
                 target="_blank"
