HW4 mistakes remove commit

--- a/index.html
+++ b/index.html
@@ -42,37 +42,26 @@
             </ul>
           </nav>
         </div>
+
         <div class="contact-container">
           <ul class="list contact">
-            <li class="contact-item-icon">
-              <a class="link" href="mailto:info@devstudio.com"
+            <li class="contact-item-icon contact-item">
+              <a
+                class="link contact-item-link contact"
+                href="mailto:info@devstudio.com"
                 ><svg class="header-icons" width="16" height="12">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
+                info@devstudio.com
               </a>
             </li>
-            <li class="contact-item">
-              <a
-                class="contact-item-link contact link"
-                href="mailto:info@devstudio.com"
-              >
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="contact-item-icon">
-              <a class="link" href="tel:+380961111111"
+            <li class="contact-item-icon contact-item">
+              <a class="link contact-item-link contact" href="tel:+380961111111"
                 ><svg class="header-icons" width="10" height="16">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
+                +38 096 111 11 11
               </a>
-            </li>
-            <li class="contact-item">
-              <a
-                class="contact-item-link contact link"
-                href="tel:+380961111111"
-              >
-                +38 096 111 11 11</a
-              >
             </li>
           </ul>
         </div>
@@ -200,6 +189,7 @@
                   <ul class="list team-social">
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -212,6 +202,7 @@
 
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -223,6 +214,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -234,6 +226,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -258,6 +251,7 @@
                   <ul class="list team-social">
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -270,6 +264,7 @@
 
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -281,6 +276,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -292,6 +288,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -316,6 +313,7 @@
                   <ul class="list team-social">
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -328,6 +326,7 @@
 
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -339,6 +338,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -350,6 +350,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -374,6 +375,7 @@
                   <ul class="list team-social">
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://instagram.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -386,6 +388,7 @@
 
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://twitter.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -397,6 +400,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://facebook.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -408,6 +412,7 @@
                     </li>
                     <li class="team-social-items">
                       <a
+                        class="team-icons-items"
                         href="http://linkedin.com"
                         target="_blank"
                         rel="noopener nofollow noreferrer"
@@ -474,7 +479,6 @@
         </div>
       </section>
     </main>
-
     <!-- background -->
     <footer class="footer-style">
       <div class="container footer-container">
