--- a/portfolio.html
+++ b/portfolio.html
@@ -40,37 +40,26 @@
             </ul>
           </nav>
         </div>
+
         <div class="contact-container">
           <ul class="list contact">
-            <li class="contact-item-icon">
-              <a class="link" href="mailto:info@devstudio.com"
+            <li class="contact-item-icon contact-item">
+              <a
+                class="link contact-item-link contact"
+                href="mailto:info@devstudio.com"
                 ><svg class="header-icons" width="16" height="12">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
+                info@devstudio.com
               </a>
             </li>
-            <li class="contact-item">
-              <a
-                class="contact-item-link contact link"
-                href="mailto:info@devstudio.com"
-              >
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="contact-item-icon">
-              <a class="link" href="tel:+380961111111"
+            <li class="contact-item-icon contact-item">
+              <a class="link contact-item-link contact" href="tel:+380961111111"
                 ><svg class="header-icons" width="10" height="16">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
+                +38 096 111 11 11
               </a>
-            </li>
-            <li class="contact-item">
-              <a
-                class="contact-item-link contact link"
-                href="tel:+380961111111"
-              >
-                +38 096 111 11 11</a
-              >
             </li>
           </ul>
         </div>
